--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -6,13 +6,14 @@ $font: "Noto Sans Lao",
 
 body{
   height: 100%;
+  font-family: $font;
+
 }
 html {
     // font setting
     p{
         margin: 0 !important;
     }
-    font-family: $font;
     margin: 0;
     ._container {
         margin-left: 340px;
@@ -79,6 +80,122 @@ html {
           }
         }
       }
+
+      // form
+      .spacer {
+        width: 15px;
+        visibility: hidden;
+        &.s {
+          width: 5px;
+        }
+      }
+      .form-container {
+        box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
+          rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+        border-radius: 5px;
+        min-width: 770px;
+        overflow: hidden;
+        padding: 50px;
+        .input-form {
+          display: flex;
+          &.block {
+            display: block;
+          }
+        }
+        .image-form {
+          display: flex;
+          .input-group {
+            width: 30%;
+            &.isCard {
+              width: 70%;
+            }
+          }
+        }
+        .input-group {
+          width: 100%;
+          padding-bottom: 15px;
+          .img-container {
+            .profile {
+              box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
+                rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+              border-radius: 5px;
+              border-radius: 5px;
+              object-fit: cover;
+              width: 100%;
+              height: 300px;
+            }
+            .personalIDCard {
+              box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
+                rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+              border-radius: 5px;
+              border-radius: 5px;
+              width: 100%;
+              object-fit: cover;
+              object-position: 100% 50%;
+              height: 300px;
+            }
+          }
+          input {
+            border-color: $sub-border-color;
+               min-width: 331px !important;
+            width: 100%;
+          }
+          input:focus {
+            outline: 1px solid $sub-color;
+            box-shadow: none;
+          }
+          input:active {
+            outline: 1px solid $sub-color;
+            box-shadow: none;
+          }
+          .text-input {
+            padding-bottom: 10px;
+      
+            display: flex;
+            .required {
+              color: $alert-color;
+              padding-left: 3px;
+            }
+          }
+          textarea {
+            min-width: 331px !important;
+            width: 100%;
+            border-color: $sub-border-color;
+            height: 40px;
+            min-height: 40px;
+            border-radius: 5px;
+            padding: 7px 11px;
+            resize: vertical;
+          }
+          textarea:focus-visible {
+            outline: 1px solid $sub-color;
+          }
+      
+          .dropdown {
+            width: 100%;
+            min-width: 331px !important;
+      
+            .dropdown-trigger {
+              width: 100%;
+              .btndropdown {
+                display: flex;
+                justify-content: flex-start;
+                width: 100%;
+                padding: 7px 11px;
+                .icon {
+                  margin-left: auto !important;
+                }
+              }
+            }
+          }
+        }
+        .btn-menu {
+          display: flex;
+        }
+      }
+      // end form
+
+
     .text-title {
         color: $primary-color;
         font-size: $title-font-size;
