add ui for employer role

--- a/public/scss/color.scss
+++ b/public/scss/color.scss
@@ -20,6 +20,7 @@ $sub-font-color: #9EA0A5;
 
 
 //button color
+$apply-btn-color:#F77E21;
 $edit-color: #130056;
 $edit-hover: #130056;
 $alert-color:#EC4C47;
