--- a/public/scss/const.scss
+++ b/public/scss/const.scss
@@ -1,5 +1,6 @@
 $title-font-size: 36px;
 $subtitle-font-size:24px;
+$subtitle:20px;
 $border-radius : 10px;
 $img-radius : 10em;
 $margin-bottom: 1em;
