--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -137,6 +137,9 @@ html {
         .input-group {
           width: 100%;
           padding-bottom: 15px;
+          &.sm{
+            width: 50%;
+          }
           &.is-check-box{
             display: flex;
                     }
