--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -297,4 +297,63 @@ html {
       margin-left: auto;
     }
 
+    // modal style
+    .modal-content {
+      display: flex;
+      overflow: hidden;
+      justify-content: center;
+      width: auto;
+      .modal-detail {
+        .image-input {
+          box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
+            rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+          border-radius: 5px;
+          .modal-image-container {
+            border-radius: 5px;
+            height: 380px;
+            width: 350px;
+            .bill {
+              border-radius: 5px;
+              width: 100%;
+              height: 100%;
+            }
+          }
+        }
+        .modal-title {
+          font-size: 24px;
+          color: $primary-color;
+          display: flex;
+          justify-content: center;
+        }
+    
+        .amount-input {
+          .text-input {
+            padding-bottom: 10px;
+    
+            display: flex;
+            .required {
+              color: $alert-color;
+              padding-left: 3px;
+            }
+          }
+          input {
+            border-color: $sub-border-color;
+            min-width: 331px;
+            width: 100%;
+          }
+          input:focus {
+            outline: 1px solid $sub-color;
+            box-shadow: none;
+          }
+          input:active {
+            outline: 1px solid $sub-color;
+            box-shadow: none;
+          }
+        }
+        .btn-option-group {
+          display: flex;
+        }
+      }
+    }
+
 }
