--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -3,6 +3,7 @@ $font: "Noto Sans Lao",
 @import "./color";
 @import "./const.scss";
 @import "./table.scss";
+@import "./pdf_print.scss";
 
 body{
   height: 100%;
@@ -57,7 +58,12 @@ html {
           justify-content: space-between;
           width: 100%;
           margin-bottom: 1em;
-          min-width: 855px;
+          min-width: 1005px;
+          height: 40px;
+          &.fix_width{
+            min-width: 800px;
+          
+            }
           &.is-small-tb{
               width: 70%;
           }
@@ -69,7 +75,7 @@ html {
                   padding-left: 10%;
                   margin-top: auto;
                   margin-bottom: auto;
-                  width: 25vw;
+                  // width: 25vw;
                   height: 100%;
                   min-width: 300px;
                   border-radius: 5px;
@@ -81,6 +87,9 @@ html {
                   transform: translate(-50%, -50%);
                 }
               }
+              .datePicker {
+                margin-right: 10px;
+            }
           }
           .btn-menu {
             button {
@@ -358,6 +367,7 @@ html {
         color: red;
       }
     }
+
     
 
 }
