--- a/public/scss/pdf_print.scss
+++ b/public/scss/pdf_print.scss
@@ -24,10 +24,12 @@
         }
         .logo {
           text-align: end;
+          border-radius:50%;
           img {
             width: 50px;
             height: 50px;
             margin-bottom: 5px;
+            border-radius: 50%;
           }
         }
       }
